--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,10 @@ p {
   padding: 0 20px;
 }
 
+.clr {
+  clear: both;
+}
+
 .text-primary {
   color: #f7c08a;
 }
@@ -72,8 +76,8 @@ p {
   color: #333;
 }
 .bg-primary {
-  background: #333;
-  color: #f7c08a;
+  background: #f7c08a;
+  color: #333;
 }
 
 /* Navbar */
@@ -159,4 +163,23 @@ p {
 
 #home-info .info-content p {
   padding-bottom: 30px;
+}
+
+/* Features */
+.box {
+  float: left;
+  width: 33.3%;
+  padding: 50px;
+  text-align: center;
+}
+
+.box i {
+  margin-bottom: 10px;
+}
+
+#main-footer {
+  text-align: center;
+  background-color: #444;
+  color: #fff;
+  padding: 20px;
 }
