--- a/hotel_website_solved/css/style.css
+++ b/hotel_website_solved/css/style.css
@@ -1,14 +1,13 @@
-/* CSS Reset */
+/* Reset */
 * {
   margin: 0;
-  padding: 0;
+  padding:0;
   box-sizing: border-box;
 }
 
-/* Maint Styling */
-html,
-body {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+/* Main Styling */
+html,body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.7em;
 }
 
@@ -17,9 +16,7 @@ a {
   text-decoration: none;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3 {
   padding-bottom: 20px;
 }
 
@@ -33,25 +30,6 @@ p {
   max-width: 1100px;
   overflow: auto;
   padding: 0 20px;
-}
-
-.clr {
-  clear: both;
-}
-
-.l-heading {
-  font-size: 40px;
-}
-
-/* Padding */
-.py-1 {
-  padding: 10px 0;
-}
-.py-2 {
-  padding: 20x 0;
-}
-.py-3 {
-  padding: 30px 0;
 }
 
 .text-primary {
@@ -78,7 +56,7 @@ p {
 }
 
 .btn-light {
-  background-color: #f4f4f4;
+  background: #f4f4f4;
   color: #333;
 }
 
@@ -86,14 +64,29 @@ p {
   background: #333;
   color: #fff;
 }
+
 .bg-light {
   background: #f4f4f4;
   color: #333;
 }
+
 .bg-primary {
   background: #f7c08a;
   color: #333;
 }
+
+.clr {
+  clear: both;
+}
+
+.l-heading {
+  font-size: 40px;
+}
+
+/* Padding */
+.py-1 { padding: 10px 0; }
+.py-2 { padding: 20px 0; }
+.py-3 { padding: 30px 0; }
 
 /* Navbar */
 #navbar {
@@ -112,52 +105,30 @@ p {
 }
 
 #navbar ul {
-  float: right;
   list-style: none;
+  float: right;
 }
 
 #navbar ul li {
   float: left;
 }
+
 #navbar ul li a {
   display: block;
-  text-align: center;
   padding: 20px;
+  text-align: center;
 }
 
-#navbar ul li a:hover,
+#navbar ul li a:hover, 
 #navbar ul li a.current {
-  background-color: #444;
+  background: #444;
   color: #f7c08a;
 }
 
 /* Showcase */
 #showcase {
-  background: url("../img/showcase.jpg") no-repeat center center/cover;
+  background: url('../img/showcase.jpg') no-repeat center center/cover;
   height: 600px;
-}
-
-/* Home  Info */
-#home-info {
-  height: 400px;
-}
-
-#home-info .info-img {
-  float: left;
-  width: 50%;
-  background: url("https://media.california.com/media/_versions/articles/santa_barbara_downtown_thumbnail_1.jpg")
-    no-repeat;
-  min-height: 100%;
-  background-position: center;
-}
-
-#home-info .info-content {
-  float: right;
-  width: 50%;
-  height: 100%;
-  text-align: center;
-  padding: 50px 30px;
-  overflow: hidden;
 }
 
 #showcase .showcase-content {
@@ -176,6 +147,27 @@ p {
   line-height: 1.7em;
 }
 
+/* Home Info */
+#home-info {
+  height: 400px;
+}
+
+#home-info .info-img {
+  float: left;
+  width: 50%;
+  background: url('../img/photo-1.jpg') no-repeat;
+  min-height: 100%;
+}
+
+#home-info .info-content {
+  float: right;
+  width: 50%;
+  height: 100%;
+  text-align: center;
+  padding: 50px 30px;
+  overflow: hidden;
+}
+
 #home-info .info-content p {
   padding-bottom: 30px;
 }
@@ -185,7 +177,7 @@ p {
   float: left;
   width: 33.3%;
   padding: 50px;
-  text-align: center;
+  text-align:center;
 }
 
 .box i {
@@ -215,7 +207,7 @@ p {
 /* Testimonials */
 #testimonials {
   height: 600px;
-  background: url("../img/test-bg.jpg") no-repeat center center/cover;
+  background: url('../img/test-bg.jpg') no-repeat center center/cover;
   padding-top: 100px;
 }
 
@@ -239,9 +231,37 @@ p {
   border-radius: 50%;
 }
 
+/* Contact Form */
+#contact-form .form-group {
+  margin-bottom: 20px;
+}
+
+#contact-form label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+#contact-form input, 
+#contact-form textarea {
+  width: 100%;
+  padding: 10px;
+  border: 1px #ddd solid;
+}
+
+#contact-form textarea {
+  height: 200px;
+}
+
+#contact-form input:focus, 
+#contact-form textarea:focus {
+  outline: none;
+  border-color: #f7c08a;
+}
+
+/* Footer */
 #main-footer {
   text-align: center;
-  background-color: #444;
+  background: #444;
   color: #fff;
   padding: 20px;
 }
